// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steem adds account after updatear 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "300.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem adds account after updatear 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem adds account after updatear 3`] = `
Array [
  Object {
    "active": 1,
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem adds account after updatear 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem checks bounty 1`] = `
Array [
  Object {
    "author": 11,
    "paid": "10.0000 SNAX",
    "permlink": "somearticle",
    "seq": 0,
    "title": "Some article",
  },
]
`;

exports[`Steem checks bounty 2`] = `
Array [
  Object {
    "total_paid": "10.0000 SNAX",
  },
]
`;

exports[`Steem creates account using updatear method 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem creates account using updatear method 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem creates account using updatear method 3`] = `Array []`;

exports[`Steem creates account using updatear method 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem creates accounts using updatearmult method 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem creates accounts using updatearmult method 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem creates accounts using updatearmult method 3`] = `Array []`;

exports[`Steem creates accounts using updatearmult method 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 6,
    },
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "",
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "",
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem deactivates and activates account 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "300.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem deactivates and activates account 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem deactivates and activates account 3`] = `
Array [
  Object {
    "active": 0,
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem deactivates and activates account 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem deactivates and activates account 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "300.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem deactivates and activates account 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem deactivates and activates account 7`] = `
Array [
  Object {
    "active": 1,
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem deactivates and activates account 8`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem drops account after updatear 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "300.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem drops account after updatear 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem drops account after updatear 3`] = `
Array [
  Object {
    "active": 1,
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem drops account after updatear 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem drops account after updatear 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem drops account after updatear 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem drops account after updatear 7`] = `Array []`;

exports[`Steem drops account after updatear 8`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem drops user after updatear 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem drops user after updatear 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem drops user after updatear 3`] = `Array []`;

exports[`Steem drops user after updatear 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem drops user after updatear 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem drops user after updatear 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem drops user after updatear 7`] = `Array []`;

exports[`Steem drops user after updatear 8`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should add account correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem should add account correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should add account correctly 3`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem should add account correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "posts_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Steem should create user using newaccount method 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem should create user using newaccount method 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should create user using newaccount method 3`] = `
Array [
  Object {
    "active": 1,
    "id": 65,
    "last_paid_step_number": 0,
    "name": "created11",
    "stat_diff": Array [
      0,
      0,
      0,
    ],
    "verification_post": 43,
    "verification_salt": "hello",
  },
]
`;

exports[`Steem should create user using newaccount method 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "accountname",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 65,
      "last_attention_rate_updated_step_number": 0,
      "posts_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Steem should initialize correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem should initialize correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should initialize correctly 3`] = `Array []`;

exports[`Steem should initialize correctly 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should process next round correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 2,
    },
  ],
}
`;

exports[`Steem should process next round correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should process next round correctly 3`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      50,
      11,
      25,
      50,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      51,
      10,
      210,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1200,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      51,
      120,
      210,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem should process next round correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 6,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem should process next round correctly 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1209541372.0000 SNAX",
      },
    ],
  },
]
`;

exports[`Steem should process next round correctly 6`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 3,
    },
  ],
}
`;

exports[`Steem should process next round correctly 7`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should process next round correctly 8`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      50,
      11,
      25,
      50,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1007,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      51,
      10,
      210,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1200,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      51,
      120,
      210,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem should process next round correctly 9`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 6,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem should process next round correctly 10`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "1209541372.0000 SNAX",
      "step_number": 2,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem should process next round correctly 11`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "registered_attention_rate": "600.00000000000000000",
      "registered_user_count": 4,
      "round_sent_account_count": 4,
      "round_supply": "1209541372.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "1209541372.0000 SNAX",
      "step_number": 1,
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
    },
  ],
}
`;

exports[`Steem should process next round correctly 12`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 1,
    "name": "test1",
    "stat_diff": Array [
      50,
      11,
      25,
      50,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1007,
    "last_paid_step_number": 1,
    "name": "test1",
    "stat_diff": Array [
      51,
      10,
      210,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1105,
    "last_paid_step_number": 1,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 1200,
    "last_paid_step_number": 1,
    "name": "test2",
    "stat_diff": Array [
      51,
      120,
      210,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem should process next round correctly 13`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 6,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem should process next round correctly 14`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "604770686.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "604770686.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Steem should process social transfer correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 15,
    },
  ],
}
`;

exports[`Steem should process social transfer correctly 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "980.0000 SNAX",
      },
      Object {
        "balance": "1000.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Steem should process social transfer correctly 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should process social transfer correctly 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "980.0000 SNAX",
      },
      Object {
        "balance": "1000.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "20.0000 SNAX",
      },
    ],
  },
]
`;

exports[`Steem should process social transfer with account name correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 15,
    },
  ],
}
`;

exports[`Steem should process social transfer with account name correctly 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "980.0000 SNAX",
      },
      Object {
        "balance": "1000.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Steem should process social transfer with account name correctly 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should process social transfer with account name correctly 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "980.0000 SNAX",
      },
      Object {
        "balance": "1000.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "20.0000 SNAX",
      },
    ],
  },
]
`;

exports[`Steem should process social transfers with different assets correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 16,
    },
    Object {
      "amount": "20.0000 SNAX",
      "id": 17,
    },
  ],
}
`;

exports[`Steem should process social transfers with different assets correctly 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNIX",
      "id": 15,
    },
    Object {
      "amount": "20.0000 SNIX",
      "id": 30,
    },
  ],
}
`;

exports[`Steem should process social transfers with different assets correctly 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "960.0000 SNAX",
      },
      Object {
        "balance": "960.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`Steem should process social transfers with different assets correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNAX",
      "id": 16,
    },
    Object {
      "amount": "20.0000 SNAX",
      "id": 17,
    },
  ],
}
`;

exports[`Steem should process social transfers with different assets correctly 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "amount": "20.0000 SNIX",
      "id": 30,
    },
  ],
}
`;

exports[`Steem should process social transfers with different assets correctly 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "960.0000 SNAX",
      },
      Object {
        "balance": "960.0000 SNIX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "20.0000 SNIX",
      },
    ],
  },
]
`;

exports[`Steem should update account's attention rate correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "20.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "20.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem should update account's attention rate correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should update account's attention rate correctly 3`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem should update account's attention rate correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "20.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 7,
    },
  ],
}
`;

exports[`Steem should update multiple account's attention rate correctly 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "45.00000000000000000",
      "registered_user_count": 2,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 2,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "45.00000000000000000",
      "total_user_count": 2,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem should update multiple account's attention rate correctly 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem should update multiple account's attention rate correctly 3`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
  Object {
    "active": 1,
    "id": 243,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      20,
      30,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem should update multiple account's attention rate correctly 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "25.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "test_account",
      "attention_rate": "20.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 243,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 6,
    },
  ],
}
`;

exports[`Steem shouldn't be able to add user with the same id second time 1`] = `"missing addaccount.id (type=uint64)"`;

exports[`Steem shouldn't be able to add user with the same id second time 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to add user with the same id second time 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldn't be able to add user with the same id second time 4`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem shouldn't be able to add user with the same id second time 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "posts_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to initialize second time 1`] = `"assertion failure with message: platform is already initialized"`;

exports[`Steem shouldn't be able to initialize second time 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to initialize second time 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldn't be able to initialize second time 4`] = `Array []`;

exports[`Steem shouldn't be able to initialize second time 5`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldn't be able to update attention rate when p.steem is updating 1`] = `"assertion failure with message: platform must be in updating state 1 when updatear action is called"`;

exports[`Steem shouldn't be able to update attention rate when p.steem is updating 2`] = `"assertion failure with message: platform must be in updating state 1 when updatearmult action is called"`;

exports[`Steem shouldn't be able to update attention rate when p.steem is updating 3`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 2,
    },
  ],
}
`;

exports[`Steem shouldn't be able to update attention rate when p.steem is updating 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldn't be able to update attention rate when p.steem is updating 5`] = `
Array [
  Object {
    "active": 1,
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem shouldn't be able to update attention rate when p.steem is updating 6`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "posts_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to update attention rate when p.steem isnt in updating ar state 1`] = `"assertion failure with message: platform must be in updating state 1 when updatear action is called"`;

exports[`Steem shouldn't be able to update attention rate when p.steem isnt in updating ar state 2`] = `"assertion failure with message: platform must be in updating state 1 when updatearmult action is called"`;

exports[`Steem shouldn't be able to update attention rate when p.steem isnt in updating ar state 3`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to update attention rate when p.steem isnt in updating ar state 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldn't be able to update attention rate when p.steem isnt in updating ar state 5`] = `
Array [
  Object {
    "active": 1,
    "id": 1105,
    "last_paid_step_number": 0,
    "name": "test1",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem shouldn't be able to update attention rate when p.steem isnt in updating ar state 6`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 1105,
      "last_attention_rate_updated_step_number": 0,
      "posts_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to update non-existent account's attention rate 1`] = `"assertion failure with message: platform must be in updating state 1 when updatear action is called"`;

exports[`Steem shouldn't be able to update non-existent account's attention rate 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 1,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 1,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem shouldn't be able to update non-existent account's attention rate 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldn't be able to update non-existent account's attention rate 4`] = `
Array [
  Object {
    "active": 1,
    "id": 123,
    "last_paid_step_number": 0,
    "name": "test2",
    "stat_diff": Array [
      5,
      10,
      15,
    ],
    "verification_post": "1083836521751478272",
    "verification_salt": "12345",
  },
]
`;

exports[`Steem shouldn't be able to update non-existent account's attention rate 5`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "test_account",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 0,
      "id": 123,
      "last_attention_rate_updated_step_number": 0,
      "posts_ranked_in_last_period": 0,
    },
  ],
}
`;

exports[`Steem shouldnt be able to create user using newaccount method 1`] = `"assertion failure with message: platform or creator authority needed"`;

exports[`Steem shouldnt be able to create user using newaccount method 2`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 0,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "0.00000000000000000",
      "total_user_count": 0,
      "updating": 0,
    },
  ],
}
`;

exports[`Steem shouldnt be able to create user using newaccount method 3`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem shouldnt be able to create user using newaccount method 4`] = `Array []`;

exports[`Steem shouldnt be able to create user using newaccount method 5`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem updates account using updatear method second time 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 1,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "300.00000000000000000",
      "total_user_count": 1,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem updates account using updatear method second time 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem updates account using updatear method second time 3`] = `Array []`;

exports[`Steem updates account using updatear method second time 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;

exports[`Steem updates the same accounts again during one step 1`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account": "p.steem",
      "airdrop": "",
      "platform_name": "test_p.steem",
      "registered_attention_rate": "0.00000000000000000",
      "registered_user_count": 0,
      "round_sent_account_count": 0,
      "round_supply": "0.0000 SNAX",
      "round_updated_account_count": 4,
      "sent_amount": "0.0000 SNAX",
      "step_number": 1,
      "token_dealer": "snax",
      "token_symbols": Array [
        "379052774148",
      ],
      "total_attention_rate": "600.00000000000000000",
      "total_user_count": 4,
      "updating": 1,
    },
  ],
}
`;

exports[`Steem updates the same accounts again during one step 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`Steem updates the same accounts again during one step 3`] = `Array []`;

exports[`Steem updates the same accounts again during one step 4`] = `
Object {
  "more": false,
  "rows": Array [
    Object {
      "account_name": "",
      "attention_rate": "0.00000000000000000",
      "attention_rate_rating_position": 4294967295,
      "id": 123,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 6,
    },
    Object {
      "account_name": "",
      "attention_rate": "300.00000000000000000",
      "attention_rate_rating_position": 1,
      "id": 1007,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "",
      "attention_rate": "50.00000000000000000",
      "attention_rate_rating_position": 3,
      "id": 1105,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
    Object {
      "account_name": "",
      "attention_rate": "250.00000000000000000",
      "attention_rate_rating_position": 2,
      "id": 1200,
      "last_attention_rate_updated_step_number": 1,
      "posts_ranked_in_last_period": 10,
    },
  ],
}
`;
